--- a/gwtproject/src/main/webapp/Main.css
+++ b/gwtproject/src/main/webapp/Main.css
@@ -44,11 +44,11 @@ h1 {
 
 
 .column0 {
-	width: 40px;
+	width: 25px;
 }
 
 .column1 {
-	width: 40px;
+	width: 55px;
 }
 
 .column2 {
@@ -64,7 +64,47 @@ h1 {
 }
 
 .column5 {
-	width: 140px;
+	width: 150px;
+}
+
+.column6 {
+	width: 75px;
+}
+
+.column7 {
+	width: 75px;
+}
+
+.lbTitle {
+	width: 47px;
+	font-size: small;
+	font-family: inherit;
+}
+
+.tbFirstName {
+	width: 88px;
+	font-size: small;
+	font-family: inherit;
+}
+
+.tbLastName {
+	width: 88px;
+	font-size: small;
+	font-family: inherit;
+}
+
+.lbCustomerType {
+	width: 145px;
+	font-size: small;
+	font-family: inherit;
+}
+
+.confirmButton {
+	color: #ff0000;
+}
+
+.pageButton {
+	
 }
 
 .sendButton {
